tests/tooling/fixtures/native/recovery/negative/negative_for_step_unknown_target.objc3
// Expected diagnostic code(s): O3S214.
module NegativeForStepUnknownTarget;

fn main() -> i32 {
  for (let i = 0; i < 3; missing = 1) {
    let x = i;
  }
  return 0;
}

